sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: type mismatch;
 found   : Unit
 required: Int
var indiceInserer : Int = indiceInserer = i-1;
                                        ^